Addition of compare page

--- a/src/components/HeroSecondPage.astro
+++ b/src/components/HeroSecondPage.astro
@@ -4,7 +4,7 @@
 ---
 
 
-<div class="w-screen min-h-screen flex flex-col items-center gap-10 secondPage bg-white text-black">
+<div class="w-screen min-h-screen flex flex-col items-center gap-10 secondPage bg-[#FBF8F4] text-black">
     <div class="w-full h-[20%] animated-texts mt-10 flex items-start justify-center">
         <p class="py-16 text-xl font-inter ">[ <span class="font-inter" >Who we are </span>]</p>
     </div>
