--- a/src/components/Horizontal .astro
+++ b/src/components/Horizontal .astro
@@ -43,7 +43,7 @@ const services = [
     height: 100vh;
     overflow: hidden;
     position: relative; /* Added for positioning */
-    background-color: #ffffff;
+    background-color: #FBF8F4;
     display: flex;
     align-items: center;
     justify-content: center;
