--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -3,7 +3,7 @@ import * as Icons from "@astropub/icons"
 ---
 
 
-<div class="w-screen h-full bg-white mt-12">
+<div class="w-screen h-full bg-[#FBF8F4] mt-12">
     <p class="text-start font-new w-full stretch font-bold text-[2rem] px-16">
         Our Standard Pricing 
     </p>
