--- a/src/components/Stats.astro
+++ b/src/components/Stats.astro
@@ -1,13 +1,13 @@
 ---
 ---
 
-<div class="w-screen h-full my-20 bg-white">
+<div class="w-screen h-full my-20 bg-[#FBF8F4] ">
     <div class="w-full h-full flex items-center justify-start">
         <p class="w-[60%] font-new font-semibold stretch text-[3rem] ps-16 leading-none">
             Results That Speak: Achieve lasting impressions with our superior usability and aesthetics.
         </p>
     </div>  
-    <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-white">
+    <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-[#FBF8F4] ">
         <div class="w-full h-[15rem] relative bar">
             <div class="absolute w-[45%] h-[11rem] bg-black z-10 black"></div>
             <div class="absolute w-[94%] h-[11rem] bg-[#D2FF56] rounded-r-[3rem] green flex items-center justify-end pe-10 font-new font-semibold stretch text-[3rem] leading-none stretch">108%</div>
@@ -21,7 +21,7 @@
             </p>
         </div>
     </div>
-    <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-white">
+    <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-[#FBF8F4] ">
         <div class="w-full h-[15rem] relative bar">
             <div class="absolute w-[15%] h-[11rem] bg-black z-10 black"></div>
             <div class="absolute w-[94%] h-[11rem] bg-[#D2FF56] rounded-r-[3rem] green flex items-center justify-end pe-10 font-new font-semibold stretch text-[3rem] leading-none stretch">81%</div>
@@ -35,7 +35,7 @@
             </p>
         </div>
     </div>
-    <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-white">
+    <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-[#FBF8F4] ">
         <div class="w-full h-[15rem] relative bar">
             <div class="absolute w-[35%] h-[11rem] bg-black z-10 black"></div>
             <div class="absolute w-[94%] h-[11rem] bg-[#D2FF56] rounded-r-[3rem] green flex items-center justify-end pe-10 font-new font-semibold stretch text-[3rem] leading-none stretch">3-4 x</div>
@@ -49,7 +49,7 @@
             </p>
         </div>
     </div>
-    <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-white">
+    <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-[#FBF8F4] ">
         <div class="w-full h-[15rem] relative bar">
             <div class="absolute w-[25%] h-[11rem] bg-black z-10 black"></div>
             <div class="absolute w-[94%] h-[11rem] bg-[#D2FF56] rounded-r-[3rem] green flex items-center justify-end pe-10 font-new font-semibold stretch text-[3rem] leading-none stretch">3-4 x</div>
