--- a/src/pages/company/index.astro
+++ b/src/pages/company/index.astro
@@ -5,6 +5,7 @@ import Marquee from "../../components/marquee.astro";
 import HeroSixthPage from "../../components/HeroSixthPage.astro";
 import CTAPage from "../../components/CTAPage.astro";
 import Navbar from "../../components/Navbar.astro";
+import Footer from "../../components/Footer.astro";
 
 const sections = [
     {
@@ -248,6 +249,7 @@ const sections = [
             </div>
           </section>
     </div>
+    <Footer/>
 </Layout>
 
 <style>
