--- a/src/pages/resources/index.astro
+++ b/src/pages/resources/index.astro
@@ -5,6 +5,7 @@ import astrixblack from "/public/assets/asterisk.png"
 import mockup from "/public/assets/mockup1.jpg"
 import placeholder from "/public/assets/user.jpg"
 import articles from "../../data/articleData.js";
+import Footer from "../../components/Footer.astro";
 ---
 
 
@@ -68,7 +69,7 @@ import articles from "../../data/articleData.js";
             ))}
         </div>
         </div>
-        
+        <Footer/>
     </div>
 </Layout>
 
