--- a/src/components/StackingCards.astro
+++ b/src/components/StackingCards.astro
@@ -6,7 +6,7 @@ import * as Icon from '@astropub/icons'
 
 ---
 
-<section class="cardStacking flex items-center justify-center min-h-screen bg-white">
+<section class="cardStacking flex items-center justify-center min-h-screen bg-[#FBF8F4]">
   <div class="container mx-auto">
     <div class="flex ">
       <div class="w-full flex items-center justify-center">
@@ -39,7 +39,7 @@ import * as Icon from '@astropub/icons'
   </div>
 </section>
 
-<section class="spacer bg-white"></section>
+<section class="spacer bg-[#FBF8F4]"></section>
 
 <style>
 .akira{
