--- a/src/components/loader.astro
+++ b/src/components/loader.astro
@@ -11,7 +11,7 @@ import HeroLastPage from '../components/HeroLastPage.astro';
 ---
 
 <Layout title="CX-Point">
-	<main class="relative w-full h-full bg-white">
+	<main class="relative w-full h-full [#FBF8F4]">
         <section class="loader z-40 scroll-disabled h-[100vh] w-[100vw]">
             <div class="second w-[60%] h-[1200px] absolute flex items-center justify-center ">
                 <div class=" w-[50%] flex flex-col gap-4 items-center scroll opacity-0 translate-y-full pointer-events-none">
@@ -44,7 +44,7 @@ import HeroLastPage from '../components/HeroLastPage.astro';
             </div>
 		</section>
 		<div class="w-full h-full relative page1">
-			<nav class="navbar fixed top-0 left-0 w-full bg-white shadow-md z-50">
+			<nav class="navbar fixed top-0 left-0 w-full bg-[#FBF8F4] shadow-md z-50">
 				<div class="container mx-auto flex justify-between items-center p-4">
 					<div class="text-xl font-bold"><a href="/">Logo</a></div>
 					<ul class="flex space-x-4">
