--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,10 +12,11 @@ import HeroSeventhPage from '../components/HeroSeventhPage.astro';
 import Navbar from '../components/Navbar.astro';
 import Stats from '../components/Stats.astro';
 import CTAPage from '../components/CTAPage.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <Layout title="CX-Point">
-	<main class="w-[100vw] h-[100vh] bg-white">
+	<main class="w-[100vw] h-[100vh] bg-[#FBF8F4]">
         <section class="loader absolute z-40 h-[100vh] w-[100vw]">
             <div class="second w-full h-full flex items-center justify-center ">
                 <div class=" w-[50%] flex flex-col gap-4 items-center pointer-events-none">
@@ -56,7 +57,7 @@ import CTAPage from '../components/CTAPage.astro';
 			</div>
 		</div> 
 		<StackingCards />
-		<div class="w-screen h-[350px] bg-white flex items-center justify-start px-28">
+		<div class="w-screen h-[350px] bg-[#FBF8F4] flex items-center justify-start px-28">
 			<div class="flex flex-col items-start justify-center w-[60%]">
 				<div class="flex items-center justify-start gap-4">
 					<img src={astrixblack.src} alt="astrix" class="w-[4%] h-[4%] rotate"/>
@@ -70,6 +71,7 @@ import CTAPage from '../components/CTAPage.astro';
 		<HeroLastPage/>
 		<!-- <Stats /> -->
 		<CTAPage />
+		<Footer/>
 		
 	</main>
 </Layout>
