--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -5,9 +5,10 @@ import ServiceCards from '../../components/ServiceCards.astro';
 import CTAPage from "../../components/CTAPage.astro";
 import Navbar from "../../components/Navbar.astro";
 import HeroSixthPage from "../../components/HeroSixthPage.astro";
+import Footer from "../../components/Footer.astro";
 ---
 <Layout title="CX-Point">
-<div class="w-full min-h-screen bg-white">
+<div class="w-full min-h-screen bg-[#FBF8F4]">
     <Navbar/>
     <div class="w-full h-[90vh] flex flex-col justify-start pt-40 px-20 pb-20">
         <div>
@@ -27,7 +28,7 @@ import HeroSixthPage from "../../components/HeroSixthPage.astro";
             </div>
         </div>
     </div>
-    <div class="w-screen h-full bg-white">
+    <div class="w-screen h-full bg-[#FBF8F4]">
         <ServiceCards />
     </div>
     <div class="w-full h-fit flex flex-col items-start justify-start gap-10 px-20 pt-20">
@@ -37,6 +38,7 @@ import HeroSixthPage from "../../components/HeroSixthPage.astro";
     </div>
     <HeroSixthPage/>
     <CTAPage />
+    <Footer/>
 </div>
 </Layout>
 
