--- a/src/components/HeroSeventhPage.astro
+++ b/src/components/HeroSeventhPage.astro
@@ -4,30 +4,30 @@ import astrix from "../../public/assets/whiteAsterisk.png"
 ---
 
 <div class="w-screen h-screen main_container relative">
-    <div class="absolute left-0 top-0 w-screen h-screen z-40 bg-red-500  child_container">
+    <div class="absolute left-0 top-0 w-screen h-screen z-40   child_container">
         <div class="w-full h-full flex items-center justify-center">
-            <div class="w-[50%] h-full bg-[#273DFF] p-14 flex flex-col">
+            <div class="w-[100%] md:w-[50%] h-full bg-[#1E1E1D] md:p-14 p-4 flex flex-col">
                 <div class="flex flex-col">
-                    <p class="text-white text-[1.2rem] font-bold">
+                    <p class=" text-[2rem] md:text-[1.2rem] font-bold leading-[100%] mb-2 md:mb-2 text-[#E7E7D6]">
                         First Impressions matter
                     </p>
-                    <p class="text-white text-[1.1rem] font-semibold leading-[100%] w-[70%] text-white/70">
+                    <p class=" text-[1.1rem] font-semibold leading-[100%] w-[70%] text-white/70">
                         Your website, product, or branding is the first interaction potential customers have with your business.A professional design creates a strong, positive first impression, leading to increased trust and credibility.
                     </p>
                 </div>
                 <div class="flex flex-col">
-                    <p class="font-new statistics mt-8">
+                    <p class="font-new statistics mt-8 ">
                         94%
                     </p>
-                    <p class="text-white text-[2rem] font-bold">
+                    <p class="text-[#E7E7D6] text-[2rem] font-bold leading-[100%]">
                         of first impressions are design-related
                     </p>
                 </div>
-                <p class="w-[80%] text-white text-[1.1rem] font-semibold leading-[100%] text-white/70 mt-10">
+                <p class="w-[80%] text-[1.1rem] font-semibold leading-[100%] text-white/70 mt-10">
                     A well designed website can make a lasting impression, setting the stage for long-term success.
                 </p>
             </div>
-            <div class="w-[50%] h-full bg-[#273DFF] p-14 flex items-start justify-center pt-24">
+            <div class="w-[50%] h-full bg-[#1E1E1D] p-14 hidden md:flex items-start justify-center pt-24">
                 <img src={astrix.src} alt="asterisk" class="w-[20%] astrix-clock">
                 <img src={astrix.src} alt="asterisk" class="w-[20%] ">
                 <img src={astrix.src} alt="asterisk" class="w-[20%] astrix-clock">
@@ -35,14 +35,14 @@ import astrix from "../../public/assets/whiteAsterisk.png"
             </div>
         </div>
     </div>
-    <div class="absolute left-0 top-0 w-screen h-screen z-30 bg-blue-500  child_container">
+    <div class="absolute left-0 top-0 w-screen h-screen z-30  child_container">
         <div class="w-full h-full flex items-center justify-center">
-            <div class="w-[50%] h-full bg-[#273DFF] p-14 flex flex-col">
+            <div class="w-[100%] md:w-[50%] h-full bg-[#1E1E1D] md:p-14 p-4 flex flex-col">
                 <div class="flex flex-col">
-                    <p class="text-white text-[1.2rem] font-bold">
+                    <p class="text-[#E7E7D6] text-[2rem] md:text-[1.2rem] font-bold leading-[100%] mb-2 md:mb-2">
                         Brand differentiation
                     </p>
-                    <p class="text-white text-[1.1rem] font-semibold leading-[100%] w-[70%] text-white/70">
+                    <p class="text-white/70 text-[1.1rem] font-semibold leading-[100%] w-[70%] ">
                         Effective branding distinguishes your business from competitors, creating a unique identity that resonates with your target audience.This fosters customer loyalty and trust, setting your brand apart in the market.
                     </p>
                 </div>
@@ -50,15 +50,15 @@ import astrix from "../../public/assets/whiteAsterisk.png"
                     <p class="font-new statistics mt-8">
                         3-5 x
                     </p>
-                    <p class="text-white text-[2rem] font-bold">
+                    <p class="text-[#E7E7D6] text-[2rem] font-bold leading-[100%]">
                         higher conversion rates from awareness
                     </p>
                 </div>
-                <p class="w-[80%] text-white text-[1.1rem] font-semibold leading-[100%] text-white/70 mt-10">
+                <p class="w-[80%] text-[1.1rem] font-semibold leading-[100%] text-white/70 mt-10">
                     Effective differentiation strategies give customers compelling reasons to choose a particular brand over competitors.
                 </p>
             </div>
-            <div class="w-[50%] h-full bg-[#273DFF] p-14 flex items-start justify-center pt-24">
+            <div class="w-[50%] h-full bg-[#1E1E1D] p-14 hidden md:flex items-start justify-center pt-24">
                 <img src={astrix.src} alt="asterisk" class="w-[20%] ">
                 <img src={astrix.src} alt="asterisk" class="w-[20%] astrix-clock">
                 <img src={astrix.src} alt="asterisk" class="w-[20%] ">
@@ -66,14 +66,14 @@ import astrix from "../../public/assets/whiteAsterisk.png"
             </div>
         </div>
     </div>
-    <div class="absolute left-0 top-0 w-screen h-screen z-20 bg-green-500  child_container">
+    <div class="absolute left-0 top-0 w-screen h-screen z-20  child_container">
         <div class="w-full h-full flex items-center justify-center">
-        <div class="w-[50%] h-full bg-[#273DFF] p-14 flex flex-col">
+        <div class="w-[100%] md:w-[50%] h-full bg-[#1E1E1D] md:p-14 p-4 flex flex-col">
             <div class="flex flex-col">
-                <p class="text-white text-[1.2rem] font-bold">
+                <p class="text-[#E7E7D6] text-[2rem] md:text-[1.2rem] font-bold leading-[100%] mb-2 md:mb-2">
                     Imporved Usability
                 </p>
-                <p class="text-white text-[1.1rem] font-semibold leading-[100%] w-[70%] text-white/70">
+                <p class=" text-[1.1rem] font-semibold leading-[100%] w-[70%] text-white/70">
                     Good user experience is crucial for customer retention and satisfaction. A well-designed website or product ensures ease of use, accessibility, and satisfaction, leading to increased loyalty and repeat business.
                 </p>
             </div>
@@ -81,24 +81,24 @@ import astrix from "../../public/assets/whiteAsterisk.png"
                 <p class="font-new statistics mt-8">
                     71 %
                 </p>
-                <p class="text-white text-[2rem] font-bold leading-[100%]">
+                <p class="text-[#E7E7D6] text-[2rem] font-bold leading-[100%]">
                     of customers prefer businessess with seamless intiuitive UX
                 </p>
             </div>
-            <p class="w-[80%] text-white text-[1.1rem] font-semibold leading-[100%] text-white/70 mt-10">
+            <p class="w-[80%]  text-[1.1rem] font-semibold leading-[100%] text-white/70 mt-10">
                 Positive UX leads to higher satisfaction levels, as users find it easier to navigate and achieve their goals on the site
             </p>
         </div>
-        <div class="w-[50%] h-full bg-[#273DFF] p-14 flex items-start justify-end pt-24">
-            <div class="px-10 py-14 bg-black flex items-center justify-center rounded-2xl cover">
+        <div class="w-[50%] h-full bg-[#1E1E1D] p-14 md:flex hidden items-start justify-end pt-24">
+            <div class="px-10 py-14 bg-[#FF6D00] flex items-center justify-center rounded-2xl cover">
                 <img src={astrix.src} alt="asterisk" class="w-[110%] astrix-clock">
             </div>
         </div>
         </div>
     </div>
-    <div class="absolute left-0 top-0 w-screen h-screen z-10 bg-yellow-500 ">
-        <div class="w-full h-full flex items-center justify-center bg-[#273DFF] text-white overflow-hidden relative">
-            <p class="font-new text-[70rem] company absolute top-[20%] text-nowrap">CX POINT</p>
+    <div class="absolute left-0 top-0 w-screen h-screen z-10">
+        <div class="w-full h-full flex items-center justify-center bg-[#1E1E1D] text-[#E7E7D6] overflow-hidden relative">
+            <p class="font-new  company absolute top-[50%] md:top-[20%] text-nowrap">CX POINT</p>
 
         </div>
     </div>
@@ -114,7 +114,13 @@ import astrix from "../../public/assets/whiteAsterisk.png"
         font-weight: 900;
         font-size: 24rem;
         line-height: 100%;
-        color: white;
+        color: #E7E7D6
+    }
+
+    @media screen and (max-width: 768px) {
+        .statistics{
+            font-size: 10rem;
+        }
     }
 
     .company{
@@ -123,6 +129,12 @@ import astrix from "../../public/assets/whiteAsterisk.png"
         font-weight: 900;
     }
 
+    @media screen and (max-width: 768px) {
+        .company{
+            font-size: 6rem;
+            transform: translateY(-50%);
+        }
+    }
 </style>
 
 <script>
