--- a/src/components/ServiceCards.astro
+++ b/src/components/ServiceCards.astro
@@ -109,7 +109,7 @@ const cards = [
 
   .card-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 1rem;
   }
 
@@ -225,7 +225,7 @@ const cards = [
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(86, 48, 255);
+    background-color: #1E1E1D;
     transition: opacity 0.3s ease;
   }
 
@@ -238,9 +238,10 @@ const cards = [
     font-family: 'new';
     font-stretch: 500%;
     font-weight: 900;
-    font-size: 6rem;
+    font-size: 3rem;
+    text-wrap: wrap;  
     line-height:0.9;
-    color:white
+    color:#E7E7D6
   }
 
   .overlay-2{
@@ -252,9 +253,10 @@ const cards = [
     font-family: 'new';
     font-stretch: 500%;
     font-weight: 900;
-    font-size: 6rem;
+    font-size: 3rem;
+    text-wrap: wrap;
     line-height:0.9;
-    color:white
+    color:#E7E7D6
   }
 
   .overlay-3{
@@ -266,9 +268,10 @@ const cards = [
     font-family: 'new';
     font-stretch: 500%;
     font-weight: 900;
-    font-size: 6rem;
+    font-size: 3rem;
+    text-wrap: wrap;
     line-height:0.9;
-    color:white
+    color:#E7E7D6
   }
 
   .overlay-4{
@@ -280,9 +283,10 @@ const cards = [
     font-family: 'new';
     font-stretch: 500%;
     font-weight: 900;
-    font-size: 6rem;
+    font-size: 3rem;
+    text-wrap: wrap;
     line-height:0.9;
-    color:white
+    color:#E7E7D6
   }
 
   .overlay-5{
@@ -294,9 +298,10 @@ const cards = [
     font-family: 'new';
     font-stretch: 500%;
     font-weight: 900;
-    font-size: 6rem;
+    font-size: 3rem;
     line-height:0.9;
-    color:white
+    text-wrap: wrap;
+    color:#E7E7D6
   }
   .overlay-6{
     display: flex;
@@ -307,9 +312,10 @@ const cards = [
     font-family: 'new';
     font-stretch: 500%;
     font-weight: 900;
-    font-size: 6rem;
+    font-size: 3rem;
     line-height:0.9;
-    color:white
+    text-wrap: wrap;
+    color:#E7E7D6
   }
   .overlay-7{
     display: flex;
@@ -320,9 +326,10 @@ const cards = [
     font-family: 'new';
     font-stretch: 500%;
     font-weight: 900;
-    font-size: 6rem;
+    font-size: 3rem;
     line-height:0.9;
-    color:white
+    text-wrap: wrap;
+    color:#E7E7D6
   }
   .overlay-8{
     display: flex;
@@ -333,9 +340,10 @@ const cards = [
     font-family: 'new';
     font-stretch: 500%;
     font-weight: 900;
-    font-size: 6rem;
+    font-size: 3rem;
     line-height:0.9;
-    color:white
+    text-wrap: wrap;
+    color:#E7E7D6
   }
   .overlay-9{
     display: flex;
@@ -346,9 +354,10 @@ const cards = [
     font-family: 'new';
     font-stretch: 500%;
     font-weight: 900;
-    font-size: 6rem;
+    font-size: 3rem;
     line-height:0.9;
-    color:white
+    text-wrap: wrap;
+    color:#E7E7D6
   }
   .overlay-10{
     display: flex;
@@ -359,9 +368,10 @@ const cards = [
     font-family: 'new';
     font-stretch: 500%;
     font-weight: 900;
-    font-size: 6rem;
+    font-size: 3rem;
     line-height:0.9;
-    color:white
+    text-wrap: wrap;
+    color:#E7E7D6
   }
   .overlay-11{
     display: flex;
@@ -372,9 +382,10 @@ const cards = [
     font-family: 'new';
     font-stretch: 500%;
     font-weight: 900;
-    font-size: 6rem;
+    font-size: 3rem;
     line-height:0.9;
-    color:white
+    text-wrap: wrap;
+    color:#E7E7D6
   }
   .overlay-12{
     display: flex;
@@ -385,9 +396,10 @@ const cards = [
     font-family: 'new';
     font-stretch: 500%;
     font-weight: 900;
-    font-size: 6rem;
+    font-size: 3rem;
     line-height:0.9;
-    color:white
+    text-wrap: wrap;
+    color:#E7E7D6
   }
 
   .card-wrapper:hover .overlay {
