--- a/src/pages/products/index.astro
+++ b/src/pages/products/index.astro
@@ -20,7 +20,7 @@ import CompareProducts from "../../components/CompareProducts.astro";
             <div class="w-full flex items-center gap-4">
                 <img class="w-[60px] h-[60px] astrix"src={astrix} alt="astrix" />
                 <div class="w-full h-full overflow-hidden">
-                    <p class="text-[80px] akira animated-text ">Success-Driven Strories</p>
+                    <p class="text-[80px] akira animated-text ">Success-Driven Stories</p>
                 </div>
             </div>
             <div class="w-full ">
