--- a/src/components/CTAPage.astro
+++ b/src/components/CTAPage.astro
@@ -88,7 +88,12 @@
     font-weight: 700;
     font-size: 100px;
     font-stretch: 700%;
+}
 
+@media screen and (max-width: 768px) {
+    .bottomtext {
+        font-size: 2rem;
+    }
 }
 
 .bottomtext p {
