--- a/src/components/Horizontal .astro
+++ b/src/components/Horizontal .astro
@@ -23,7 +23,7 @@ const services = [
 
 ---
 
-<div class="scroll">
+<div class="scroller">
     <span class="flex items-center justify-center gap-4 cont">
         {services.map(service => (
             <div class="card">
@@ -38,18 +38,18 @@ const services = [
 </div>
 
 <style>
-    .scroll {
+    .scroller {
     width: 100%;
     height: 100vh;
     overflow: hidden;
     position: relative; /* Added for positioning */
-    background-color: #FBF8F4;
+    background-color: #E7E7D6;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-    .scroll span{
+    .scroller span{
     color: white;
     position: absolute; /* Added for animation */
     left: 50%; /* Start off-screen */
@@ -69,6 +69,12 @@ const services = [
     border-top-right-radius: 80px;
     border-bottom-left-radius: 80px;
     border-top-left-radius: 80px;
+  }
+
+  @media (max-width: 768px) {
+    .card {
+        width: 350px;
+    }
   }
 
   .card h2 {
@@ -92,18 +98,18 @@ const services = [
 <script>
     var t1 = gsap.timeline({
     scrollTrigger: {
-        trigger: ".scroll",
+        trigger: ".scroller",
         start: 'top 0%',
-        end: "top -400%",
-        scrub: true,
+        end: "top -200%",
         pin: true,
+        scrub: true,
+        markers: true,
     }
 });
 
-    t1.to(".scroll span", {
-    x: "-50%", // Move text to the left
-
-});
+    t1.to(".scroller span", {
+        x: window.innerWidth > 768 ? '-50%' : '-86.66%',
+    });
 
 
 </script>
