--- a/src/components/ProductSections.astro
+++ b/src/components/ProductSections.astro
@@ -7,9 +7,9 @@ import thirdImage from "../../public/assets/third-card.png"
 ---
 
 <div class="w-screen h-screen main_container relative">
-    <div class="absolute left-0 top-0 w-screen h-screen z-40 bg-red-500  child_container">
+    <div class="absolute left-0 top-0 w-screen h-screen z-40   child_container">
         <div class="w-full h-full flex items-center justify-center">
-            <div class="w-[50%] h-full bg-[#273DFF] px-14 py-2 flex flex-col">
+            <div class="w-[50%] h-full bg-[#1E1E1D] px-14 py-2 flex flex-col">
                 <div class="flex flex-col">
                     <p class="font-new statistics leading-none">
                         CX
@@ -31,7 +31,7 @@ import thirdImage from "../../public/assets/third-card.png"
                     A well designed website can make a lasting impression, setting the stage for long-term success.
                 </p>
             </div>
-            <div class="w-[50%] h-full bg-[#273DFF] flex items-start justify-center">
+            <div class="w-[50%] h-full bg-[#1E1E1D] flex items-start justify-center">
                 <!-- <img src={astrix.src} alt="asterisk" class="w-[20%] astrix-clock">
                 <img src={astrix.src} alt="asterisk" class="w-[20%] ">
                 <img src={astrix.src} alt="asterisk" class="w-[20%] astrix-clock">
@@ -42,9 +42,9 @@ import thirdImage from "../../public/assets/third-card.png"
             </div>
         </div>
     </div>
-    <div class="absolute left-0 top-0 w-screen h-screen z-30 bg-blue-500  child_container">
+    <div class="absolute left-0 top-0 w-screen h-screen z-30   child_container">
         <div class="w-full h-full flex items-center justify-center">
-            <div class="w-[50%] h-full bg-[#273DFF] px-14 py-2 flex flex-col">
+            <div class="w-[50%] h-full bg-[#1E1E1D] px-14 py-2 flex flex-col">
                 <div class="flex flex-col">
                     <p class="font-new statistics leading-none">
                         DX
@@ -66,21 +66,21 @@ import thirdImage from "../../public/assets/third-card.png"
                     A well designed website can make a lasting impression, setting the stage for long-term success.
                 </p>
             </div>
-            <div class="w-[50%] h-full bg-[#273DFF] flex items-start justify-center">
+            <div class="w-[50%] h-full bg-[#1E1E1D] flex items-start justify-center">
                 <div class="w-full h-full flex items-center justify-center overflow-hidden">
                     <img src={thirdImage.src} class="w-full h-full object-fit">
                 </div>
             </div>
         </div>
     </div>
-    <div class="absolute left-0 top-0 w-screen h-screen z-20 bg-green-500  child_container">
+    <div class="absolute left-0 top-0 w-screen h-screen z-20  child_container">
         <div class="w-full h-full flex items-center justify-center">
-            <div class="w-[50%] h-full bg-[#273DFF] px-14 py-2 flex flex-col">
+            <div class="w-[50%] h-full bg-[#1E1E1D] px-14 py-2 flex flex-col">
                 <div class="flex flex-col">
-                    <p class="font-new statistics leading-none">
+                    <p class="font-new statistics leading-none ">
                         BX
                     </p>
-                    <p class="text-white/70 ps-2 text-[2rem] font-bold">
+                    <p class=" ps-2 text-[2rem] font-bold text-[#E7E7D6]">
                         Business Experience
                     </p>
                 </div>
@@ -97,15 +97,15 @@ import thirdImage from "../../public/assets/third-card.png"
                     A well designed website can make a lasting impression, setting the stage for long-term success.
                 </p>
             </div>
-            <div class="w-[50%] h-full bg-[#273DFF] flex items-start justify-center">
+            <div class="w-[50%] h-full bg-[#1E1E1D] flex items-start justify-center">
                 <div class="w-full h-full flex items-center justify-center overflow-hidden">
                     <img src={secondImage.src} class="w-full h-full object-fit">
                 </div>
             </div>
         </div>
     </div>
-    <div class="absolute left-0 top-0 w-screen h-screen z-10 bg-yellow-500 ">
-        <div class="w-full h-full flex items-center justify-center bg-[#273DFF] text-white overflow-hidden relative">
+    <div class="absolute left-0 top-0 w-screen h-screen z-10 ">
+        <div class="w-full h-full flex items-center justify-center bg-[#1E1E1D] text-[#E7E7D6] overflow-hidden relative">
             <p class="font-new text-[70rem] company absolute top-[20%] text-nowrap">CX POINT</p>
 
         </div>
@@ -122,7 +122,7 @@ import thirdImage from "../../public/assets/third-card.png"
         font-weight: 900;
         font-size: 24rem;
         line-height: 100%;
-        color: white;
+        color: #E7E7D6;
     }
 
     .company{
@@ -143,7 +143,7 @@ import thirdImage from "../../public/assets/third-card.png"
         scrollTrigger: {
             trigger: ".main_container",
             start: "top top",
-            end: "bottom+=200% top",
+            end: "bottom+=10% top",
             pin: true, // Pin the main_container
             scrub: 2,
         },
