--- a/src/components/StackingCards.astro
+++ b/src/components/StackingCards.astro
@@ -12,7 +12,7 @@ import * as Icon from '@astropub/icons'
       <div class="w-full flex items-center justify-center">
         <div class="cardStacking__cards flex flex-col items-center justify-center gap-10">
 
-          <div class="stackCard flex items-center justify-between bg-[#FBFF47] w-[450px]">
+          <div class="stackCard flex items-center justify-between bg-[#ff9853] w-[450px]">
             <div class="stackCard__body w-full flex-col flex items-start justify-start">
               <span class="stackCard__body-content-header block akira text-[40px] mt-2">You have a vision but need one expert team to bring it to life ?</span>
               <div class=" px-[2px] py-[2px] rounded-full bg-black mt-10"><Icon.ChevronDown size={40} color="white"/></div>
