--- a/src/pages/company/index.astro
+++ b/src/pages/company/index.astro
@@ -6,6 +6,7 @@ import HeroSixthPage from "../../components/HeroSixthPage.astro";
 import CTAPage from "../../components/CTAPage.astro";
 import Navbar from "../../components/Navbar.astro";
 import Footer from "../../components/Footer.astro";
+import textImg from "../../../public/assets/textImg.png";
 
 const sections = [
     {
@@ -192,13 +193,15 @@ const sections = [
             </div>
         </div>
         <div id="main">
-            <div class="page6"> 
+            <div class="page6 "> 
                 <div class="bottomtext">
                     <p>Let's Talk</p>
-                    <span class="mt-24">Ready to take your brand, product, or business to the next level? No hard sell, no big pitch—just a conversation about how we can help you reach your goals.</span>
+                    <span class="mt-24 text-center">Ready to take your brand, product, or business to the next level? No hard sell, no big pitch—just a conversation about how we can help you reach your goals.</span>
                     <div class="mt-24 contact-button text-sm text-center py-5 px-8 bg-[#f9fc50] rounded-full w-fit font-medium hover:bg-black hover:text-white transition-all duration-300 ">Start Your Success</div>
+                </div> 
             </div>
-                <div id="custom-cursor-product"></div>
+            <div id="custom-cursor-product"></div>
+
         </div>
         
         <section class="contact-section ">
@@ -288,35 +291,11 @@ const sections = [
 
 .page6 {
     height: 100vh;
+    width: 100vw;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     color: black;
-}
-
-.moreCases {
-    display: flex;
-    gap: 10px;
-}
-
-.moreCases p {
-    font-family: 'new', sans-serif;
-    font-weight: 300;
-    font-size: 1rem;
-    font-stretch: 700%;
-    transition: all 0.5s ease;
-}
-
-.moreCases span {
-    font-family: 'new', sans-serif;
-    font-weight: 300;
-    font-size: 0.5rem;
-    font-stretch: 700%;
-}
-
-.moreCases p:hover {
-    font-weight: 900;
 }
 
 .bottomtext {
@@ -333,7 +312,7 @@ const sections = [
 
 .bottomtext p {
     line-height: 0.8;
-    text-align: center;
+    text-align: start;
     transition: all 0.5s ease;
 }
 
@@ -344,7 +323,6 @@ const sections = [
     font-stretch: 700%;
     width: 70%;
     text-wrap: balance;
-    text-align: center;
     line-height: 1.2;
 
 }   
@@ -353,20 +331,6 @@ const sections = [
     font-weight: 900;
 }
 
-.footertext {
-    display: flex;
-    flex-direction: column;
-    font-family: 'new', sans-serif;
-    font-weight: 400;
-    font-size: 20px;
-    font-stretch: 700%;
-}
-
-.footertext p {
-    line-height: 1;
-    text-transform: uppercase;
-    text-align: center;
-}
 
 .contact-section {
     background-color: #FBF8F4;
