--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -10,7 +10,7 @@ import Footer from "../../components/Footer.astro";
 <Layout title="CX-Point">
 <div class="w-full min-h-screen bg-[#FBF8F4]">
     <Navbar/>
-    <div class="w-full h-[90vh] flex flex-col justify-start pt-40 px-20 pb-20">
+    <!-- <div class="w-full h-[90vh] flex flex-col justify-start pt-40 px-20 pb-20">
         <div>
             <div class="w-full flex items-center gap-4">
                 <img class="w-[60px] h-[60px] astrix"src={astrix} alt="astrix" />
@@ -27,8 +27,29 @@ import Footer from "../../components/Footer.astro";
                 <p class="text-[20px] akira mt-4 animated-text">We design <span class="px-4 py-2 rounded-full border-2 border-black text-black median mx-2">Experiences</span> that transform visions into thriving businesses </p>
             </div>
         </div>
+    </div> -->
+    <div class="w-screen h-[90vh] flex flex-col pt-40 px-20 pb-20">
+        <div class="w-[70%] h-fit text-black py-2 text-[4rem] new leading-[100%]">
+            <div class="w-full h-fit overflow-hidden ">
+                <p class="animated-text">We are here to </p>
+            </div>
+            <div class="w-full h-fit overflow-hidden ">
+                <p class="animated-text">Solve real problems </p>
+            </div>
+            <div class="w-full h-fit overflow-hidden ">
+                <p class="animated-text">drive your business forward</p>
+            </div>
+        </div>
+        <div class="w-[30%] flex flex-col items-start justify-end"> 
+            <div class="w-24 h-2 bg-black mt-14 mb-6 dash"></div>
+            <div class="w-full h-full font-semibold leading-none subtext">
+              The supply chains we need, the special effects that wow, the stadiums we fill, the food we eat, the
+              clothes we wear, the cars we drive, the homes where we live, the holidays we take, the trees we
+              grow—together, we can reinvent anything.
+            </div>
+        </div>
     </div>
-    <div class="w-screen h-full bg-[#FBF8F4]">
+    <div class="w-screen h-full bg-[#FBF8F4] relative">
         <ServiceCards />
     </div>
     <div class="w-full h-fit flex flex-col items-start justify-start gap-10 px-20 pt-20">
@@ -36,7 +57,9 @@ import Footer from "../../components/Footer.astro";
             <p>We blend unmatched expertise, tailored solutions, and proven results to make your app/SaaS thrive.</p>
         </div>
     </div>
-    <HeroSixthPage/>
+    <div class="w-full h-full relative">
+        <HeroSixthPage/>
+    </div>
     <CTAPage />
     <Footer/>
 </div>
@@ -44,6 +67,11 @@ import Footer from "../../components/Footer.astro";
 
 
 <style>
+    .new{
+        font-family: 'new', sans-serif;
+        font-weight: 700;
+        font-stretch: 500%;
+    }
     .horizontal-animation-item {
         font-family: 'MediaanItalic';
         width: 300px; /* Adjust width */
@@ -143,17 +171,36 @@ import { ScrollTrigger } from 'gsap/ScrollTrigger';
 
     })
 
-    t1.from('.astrix', {
-       opacity: 0,
-       duration: 0.6,
-       delay: 0.6
-    })
+    // t1.from('.astrix', {
+    //    opacity: 0,
+    //    duration: 0.6,
+    //    delay: 0.6
+    // })
     t1.from(textElements, {
-        opacity: 0,
-        y: 50,
+        x: -850,
         duration: 1,
         ease: "power2.out",
+        stagger: 0.2
     })
 
+    t1.from(".dash" ,{
+        opacity: 0,
+        delay: 0.2
+    },"anim")
+
+    t1.from(".subtext",{
+        opacity: 0,
+        duration: 0.8,
+        x: -100,
+        ease: "power2.out"
+    },"anim")
+
+    t1.to(".dash",{
+        width:200,
+        duration: 2.5,
+        yoyo: true,
+        repeat: -1,
+        ease: "power2.inOut"
+    })
 
 </script>
