--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,6 +1,6 @@
 <nav class="navbar absolute md:top-[4%] left-1/2 transform -translate-x-1/2 w-[88%] bg-transparent z-50">
     <div class="container mx-auto flex justify-between items-center p-4">
-        <div class="text-xl font-bold text-white mix-blend-difference"><a href="/">Logo</a></div>
+        <div class="text-xl font-bold text-white mix-blend-difference"><a href="/"><img src="/public/assets/Transparent-Logo.png" alt="logo" class="w-[100px] h-auto"></a></div>
         <div class="hidden md:flex items-center justify-between"> <!-- Show on medium screens and up -->
             <ul class="flex space-x-4 px-6 py-4 bg-[#373737] rounded-full ">
                 <li class="nav-links"><a href="/products" class="text-white hover:rounded-full">Products</a></li>
